# themoviedb

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FindJson-c.cmake  compiler_options.cmake  deterministic_builds.cmake  library_functions.cmake  library_version.cmake
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  tmdb-compiler.h  tmdb.h
lib/src/: CMakeLists.txt  libtmdb.pc.in  tmdb_api.c
lib/test/: CMakeLists.txt  test_get_api_key.c
